--- a/docs/getting-started/index.mdx
+++ b/docs/getting-started/index.mdx
@@ -5,9 +5,16 @@ description: Nevermined facilitates building Digital Ecosystems
 
 # What is Nevermined?
 
-Nevermined is a platform that provides reliable Web3 infrastructure that contains the building blocks, tools, and APIs for developers, projects, and protocols to connect to the data-sharing infrastructure and build Web3 applications.
-The importance of Web3 ecosystems, digital assets, and consensus mechanisms cannot be overstated. Everything that is a part of Web 3 relies on data sharing, multi-chain interactions, tokenization, and monetization of digital assets. Therefore, the growth and demand for reliable, secure, and efficient digital ecosystem infrastructure should continue to increase alongside Web3 development as a whole.
-To this effect, Nevermined has a clear goal: to provide the ecosystem infrastructure necessary to make Web 3 development easy and accessible. Nevermined provides the tools and SDKs that developers and enterprises need to build cross-chain projects on Web 3 and extract the maximum value from their NFTs. We’re accomplishing this in a way that is in line with the principles of Web 3 by working towards scaling infrastructure and promoting data sharing in a global, decentralized environment.
+Nevermined provides developer tools and templates to unlock the next level utility behind NFT technology and turn anything and everything into a Web3-ready asset.
+
+We believe Web3 will unlock its potential when digital assets can be shared, built upon, combined and remixed. That requires advanced utility for NFTs and digital assets. Nevermined provides the open infrastructure to make that possible. We call these capabilities Asset Interactivity and will usher in the next wave of Web3 growth.
+
+Why? Because Web3 is more than JPEGs on a blockchain. 
+
+Nevermined consists of a set of Web3 tech components that enable you to level up your dApps with composable advanced features, with less time and complexity.
+
+Nevermined components can be integrated into any Web3 stack and are currently available via SDK or via Catalog.
+
 
 import DocCardList from '@site/src/components/docCard/docCardList';
 
